examples/test/testpolicy6586.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6586
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key11: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value15
      podSelector:
        matchLabels:
          key29: value5
          key42: value3
          key45: value42
